2015-03-16  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_snmp.c (snmp_get): Return integer for success or failure,
	Add function parameter for string result, and adjust function
	accordingly.
	(snmpv3_get, snmpv1_get): Adjust for snmp_get() function change.
	(array_from_snmp_result): New function.
	(nasl_snmpv3_get, nasl_snmpv1_get): Adjust for called functions changes
	and use array_from_snmp_result() accordingly.
	(proto_is_valid): Document function.

2015-03-16  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 8.0.1.

2015-03-16  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 8.0.0 release.

	* CHANGES: Updated.

	* CMakeLists.txt: Switch version scheme.

2015-03-13  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/plugutils.c (get_plugin_preference): Improve code style.

2015-03-04  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_ssh.c (nasl_ssh_userauth): Don't get any of the credentials
	from the KB if one is already provided as function argument. This fixes
	KB password taking presedence over argument private keys, for example.

2015-03-03  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_networking.c: Add include to fix build issue on some
	systems.

2015-03-03  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_networking.c (openvas_ssh_pkcs8_decrypt): Fix function
	call.

2015-03-03  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_networking.c: Add include to fix build issue on some
	systems.

2015-03-03  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_networking.c (openvas_ssh_pkcs8_decrypt)
	(openvas_ssh_public_from_private): New. Moved and adjusted from
	openvas_ssh_login.c.

	* base/openvas_networking.h: Add new functions prototypes.

	* misc/openvas_ssh_login.c, misc/openvas_ssh_login.h: Remove files.
