@@ -391,8 +391,9 @@ static init_func libfuncs[] = {
 #ifdef HAVE_NETSNMP
   {"snmpv1_get", nasl_snmpv1_get, 0, {"community", "oid", "port", "protocol",
                                       NULL }},
-  {"snmpv3_get", nasl_snmpv3_get, 0, {"algorithm", "oid", "password",
-                                      "port", "protocol", "username", NULL }},
+  {"snmpv3_get", nasl_snmpv3_get, 0, {"authpass", "authproto", "oid", "port",
+                                      "privpass", "privproto", "username",
+                                      NULL }},
 #endif /* HAVE_NETSNMP */
 
   {"ssh_connect", nasl_ssh_connect, 0, {"port", "socket", NULL }},
